// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TagDate /> should render correctly 1`] = `
<Tag
  icon="cap-calendar-2"
  size="15px"
>
  <TagDatestyle__WrapperDate>
    <span>
      10
    </span>
    <span>
      déc.
    </span>
    <span>
      •
    </span>
    <span>
      16:37
    </span>
  </TagDatestyle__WrapperDate>
</Tag>
`;

exports[`<TagDate /> should render correctly with other format date 1`] = `
<Tag
  icon="cap-calendar-2"
  size="15px"
>
  <TagDatestyle__WrapperDate>
    <span>
      10
    </span>
    <span>
      déc.
    </span>
    <span>
      •
    </span>
    <span>
      16:37
    </span>
  </TagDatestyle__WrapperDate>
</Tag>
`;

exports[`<TagDate /> should render correctly with other size 1`] = `
<Tag
  icon="cap-calendar-2"
  size="10px"
>
  <TagDatestyle__WrapperDate>
    <span>
      10
    </span>
    <span>
      déc.
    </span>
    <span>
      •
    </span>
    <span>
      16:37
    </span>
  </TagDatestyle__WrapperDate>
</Tag>
`;
